--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0.2",
         "capsule/di": "^3.4",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/breeze": "^1.19",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7"
